--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-extension",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jchoi3473.github.io/SYPP/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
@@ -18,13 +19,14 @@
     "dotenv": "^8.2.0",
     "features": "^0.1.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.3.0", 
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
@@ -37,13 +39,16 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "view": "^1.1.1",
-    "vtk.js": "^14.0.0"
+    "vtk.js": "^14.0.0",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" :"yarn build",
+    "deploy" :"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
