--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "new-extension",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jchoi3473.github.io/SYPP/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
@@ -17,6 +16,7 @@
     "bootstrap": "^4.5.2",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
     "features": "^0.1.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^3.1.0",
@@ -25,10 +25,11 @@
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0", 
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-draggable": "^4.4.3",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
@@ -46,9 +47,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" :"yarn build",
-    "deploy" :"gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
