--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "material-ui-chip-input": "^1.1.0",
+    "mdbreact": "^4.27.0",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
@@ -39,6 +40,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^2.0.1",
     "view": "^1.1.1",
     "vtk.js": "^14.0.0",
     "yarn": "^1.22.10"
