--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,15 @@
-
-
 {
   "manifest_version": 2,
 
   "name": "My Extension",
   "description": "This extension is a starting point to create a real Chrome extension",
   "version": "1.0.0",
-
+  "background": {
+    "scripts": [
+        "background.js"
+    ],
+    "persistent": true
+},
   "browser_action": {
     "default_icon": "favicon.ico",
     "default_popup": "index.html",
