--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^2.0.1",
+    "uuid": "^8.3.1",
     "view": "^1.1.1",
     "vtk.js": "^14.0.0",
     "yarn": "^1.22.10"
