--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "react-tooltip": "^4.2.10",
+    "react-tooltip": "^4.2.11",
+    "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
