--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -34,6 +35,7 @@
     "react-draggable": "^4.4.3",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-tooltip": "^4.2.11",
     "reactjs-popup": "^2.0.4",
