--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.14.5",
     "react-draggable": "^4.4.3",
+    "react-dropdown": "^1.9.2",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
