--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-draggable": "^4.4.3",
     "react-dropdown": "^1.9.2",
+    "react-input-autosize": "^3.0.0",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
